# cold-harbor-manager

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  airflow.cfg  airflow_simple_auth_passwords.example.json  cloudbuild.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  requirements_airflow.txt
dags/: breakeven_live.py  breakeven_multi_account.py
docker/airflow/: Dockerfile
docker/app/: Dockerfile
docs/: AGENTS.md  account_manager.md  core_analytics.md  data_flow_and_schema.md  frontend_logic.md  infrastructure.md  ingester.md  operations_guide.md  risk_manager.md  web_architecture.md
notebooks/: diagnose_live_db.py  risks_mgr_dev.ipynb
src/cold_harbour/: .gitignore  account_utils.py  account_web.py  debug_audit.py  manager_run.py
src/cold_harbour/core/: account_analytics.py  account_start.py  account_utils.py  date_utils.py  destinations.py  equity.py  market_schedule.py
src/cold_harbour/services/: account_manager.py
src/cold_harbour/services/account_manager/: config.py  db.py  equity.py  loader.py  local_history.py  market.py  runtime.py  snapshot.py  state.py  trades.py  utils.py  workers.py
src/cold_harbour/templates/: account_positions.html
src/cold_harbour/web/: routes.py
src/cold_harbour_manager/: __init__.py
src/cold_harbour_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cold_harbour_manager/services/: __init__.py
src/cold_harbour_web.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/coldharbor_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/coldharbor_manager/services/: risks_manager.py
src/coldharbour_manager/: __init__.py  airflow_utils.py  app.py  manager_run.py
src/coldharbour_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/coldharbour_manager/core/: account_utils.py  date_utils.py  destinations.py
src/coldharbour_manager/infrastructure/: db.py
src/coldharbour_manager/services/: account_manager.py
src/coldharbour_manager/web/: routes.py
(+36 files in other folders)
