[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coldharbor_manager"
version = "0.1.0"
description = "Shared account management and dashboard services."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Cold Harbour Team"},
]
dependencies = [
    "Flask",
    "SQLAlchemy",
    "alpaca-py",
    "alpaca-trade-api==3.2.0",
    "asyncpg",
    "gevent",
    "gunicorn",
    "nest_asyncio",
    "numpy",
    "pandas",
    "pandas_market_calendars",
    "psycopg2-binary",
    "pyzmq",
    "requests",
    "watchdog",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "coldharbor_manager",
    "coldharbor_manager.*",
    "cold_harbour",
    "cold_harbour.*",
]
